Add html for section-one

--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Food Website</title>
+   <title>Foods Website</title>
    <!-- fontawesome -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
    <!-- main styles -->
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+
+   <div class="container">
+      <!-- begin section 1 -->
+      <section class="section-one">
+         <h1 class="section-heading">Variety of Foods</h1>
+      </section>
+      <div class="section-one-icons">
+         <i class="fas fa-egg"></i>
+         <i class="fas fa-stroopwafel"></i>
+         <i class="fas fa-cheese"></i>
+         <i class="fas fa-hotdog"></i>
+         <i class="fas fa-drumstick-bite"></i>
+         <i class="fas fa-apple-alt"></i>
+         <i class="fas fa-ice-cream"></i>
+         <i class="fas fa-fish"></i>
+         <i class="fas fa-cookie"></i>
+         <i class="fas fa-seedling"></i>
+      </div>
+      <!-- end section 2 -->
+   </div>
    
    <!-- javascript -->
    <script src="./js/jquery-3.4.1.min.js"></script>
