--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="section-one">
          <h1 class="section-heading">Variety of Foods</h1>
          <div class="section-one-icons">
-            <i class="fas fa-egg"></i>
+            <i class="fas fa-egg change"></i>
             <i class="fas fa-stroopwafel"></i>
             <i class="fas fa-cheese"></i>
             <i class="fas fa-hotdog"></i>
