--- a/index.html
+++ b/index.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Foods Website</title>
-   <!-- fontawesome -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-   <!-- main styles -->
-   <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Foods Website</title>
+		<!-- fontawesome -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+		/>
+		<!-- main styles -->
+		<link rel="stylesheet" href="./css/styles.css" />
+	</head>
+	<body>
+		<div class="container">
+			<!-- begin section 1 -->
+			<section class="section-one">
+				<h1 class="section-heading">Variety of Foods</h1>
+				<div class="section-one-icons">
+					<i class="fas fa-egg change"></i>
+					<i class="fas fa-stroopwafel"></i>
+					<i class="fas fa-cheese"></i>
+					<i class="fas fa-hotdog"></i>
+					<i class="fas fa-drumstick-bite"></i>
+					<i class="fas fa-apple-alt"></i>
+					<i class="fas fa-ice-cream"></i>
+					<i class="fas fa-fish"></i>
+					<i class="fas fa-cookie"></i>
+					<i class="fas fa-seedling"></i>
+				</div>
+			</section>
+			<!-- end of section 1 -->
+			<!-- begin section 2 -->
+			<section class="section-two">
+				<h1 class="section-heading">popular meals</h1>
+				<div class="card-container">
+					<div class="card">
+						<img src="img/card-img-1.png" class="card-img" alt="fish" />
+						<h3 class="card-name">Fish</h3>
+						<button class="card-btn">Order now</button>
+					</div>
+					<div class="card">
+						<img src="img/card-img-2.png" class="card-img" alt="cupcake" />
+						<h3 class="card-name">Cake</h3>
+						<button class="card-btn">Order now</button>
+					</div>
+					<div class="card">
+						<img src="img/card-img-3.png" class="card-img" alt="lobster" />
+						<h3 class="card-name">Lobster</h3>
+						<button class="card-btn">Order now</button>
+					</div>
+				</div>
+			</section>
+			<!-- end of section 2 -->
+		</div>
 
-   <div class="container">
-      <!-- begin section 1 -->
-      <section class="section-one">
-         <h1 class="section-heading">Variety of Foods</h1>
-         <div class="section-one-icons">
-            <i class="fas fa-egg change"></i>
-            <i class="fas fa-stroopwafel"></i>
-            <i class="fas fa-cheese"></i>
-            <i class="fas fa-hotdog"></i>
-            <i class="fas fa-drumstick-bite"></i>
-            <i class="fas fa-apple-alt"></i>
-            <i class="fas fa-ice-cream"></i>
-            <i class="fas fa-fish"></i>
-            <i class="fas fa-cookie"></i>
-            <i class="fas fa-seedling"></i>
-         </div>
-      </section>
-      <!-- end section 1 -->
-   </div>
-   
-   <!-- javascript -->
-   <script src="./js/jquery-3.4.1.min.js"></script>
-   <script src="./js/scripts.js"></script>
-</body>
+		<!-- javascript -->
+		<script src="./js/jquery-3.4.1.min.js"></script>
+		<script src="./js/scripts.js"></script>
+	</body>
 </html>
