--- a/index.html
+++ b/index.html
@@ -42,18 +42,105 @@
 						<button class="card-btn">Order now</button>
 					</div>
 					<div class="card">
-						<img src="img/card-img-2.png" class="card-img" alt="cupcake" />
+						<img
+							src="img/card-img-2.png"
+							class="card-img"
+							alt="cupcake"
+						/>
 						<h3 class="card-name">Cake</h3>
 						<button class="card-btn">Order now</button>
 					</div>
 					<div class="card">
-						<img src="img/card-img-3.png" class="card-img" alt="lobster" />
+						<img
+							src="img/card-img-3.png"
+							class="card-img"
+							alt="lobster"
+						/>
 						<h3 class="card-name">Lobster</h3>
 						<button class="card-btn">Order now</button>
 					</div>
 				</div>
 			</section>
 			<!-- end of section 2 -->
+			<!-- begin section 3 -->
+			<section class="section-three">
+				<h1 class="section-heading">Gallery</h1>
+				<div class="gallery">
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-1.jpg"
+							class="food-img"
+							alt="pancakes"
+						/>
+						<h3 class="food-name">Pancakes</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-2.jpg"
+							class="food-img"
+							alt="cupcakes"
+						/>
+						<h3 class="food-name">Cupcakes</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-3.jpg"
+							class="food-img"
+							alt="hummus"
+						/>
+						<h3 class="food-name">Hummus</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-4.jpg"
+							class="food-img"
+							alt="hamburger"
+						/>
+						<h3 class="food-name">Hamburger</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-5.jpg"
+							class="food-img"
+							alt="salmon"
+						/>
+						<h3 class="food-name">Salmon</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+					<a href="#" class="gallery-link" title="Order Now?">
+						<img
+							src="/img/gallery-img-6.jpg"
+							class="food-img"
+							alt="vegetables"
+						/>
+						<h3 class="food-name">Vegetables</h3>
+						<p class="food-description">
+							Not or only sorrow from a sadness vast and seemed. Eremites
+							was whence time fathers land his, did.
+						</p>
+					</a>
+				</div>
+			</section>
+			<!-- end of  section 3 -->
 		</div>
 
 		<!-- javascript -->
