--- a/index.html
+++ b/index.html
@@ -141,6 +141,27 @@
 				</div>
 			</section>
 			<!-- end of  section 3 -->
+			<!-- begin of section 4 -->
+			<section class="section-four">
+				<div class="section-four-text">
+					<h2 class="section-four-heading">Sign Me Up</h2>
+					<p class="section-four-paragraph">
+                  be the first to know about new products!
+					</p>
+				</div>
+				<form class="signup-form">
+					<input
+						type="email"
+						class="signup-form-input"
+						placeholder="Enter Your Email"
+					/>
+					<button type="submit" class="signup-form-btn">
+						<i class="fas fa-arrow-right"></i>
+					</button>
+				</form>
+				<p class="copyright">&copy;&nbsp;Food Website, All rights reserved</p>
+			</section>
+			<!-- end of section 4 -->
 		</div>
 
 		<!-- javascript -->
