Complete html markup and styles for navbar and menu button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
+		<!-- begin of navbar -->
+		<nav class="navbar target">
+			<a href="#" class="navbar-link">
+				<i class="fas fa-home"></i>
+				<span>Home</span>
+			</a>
+			<a href="#" class="navbar-link">
+				<i class="fas fa-utensils"></i>
+				<span>Meals</span>
+			</a>
+			<a href="#" class="navbar-link">
+				<i class="fas fa-hamburger"></i>
+				<span>Burger</span>
+			</a>
+			<a href="#" class="navbar-link">
+				<i class="fas fa-pizza-slice"></i>
+				<span>Pizza</span>
+			</a>
+			<a href="#" class="navbar-link">
+				<i class="fas fa-blender-phone"></i>
+				<span>Contact</span>
+			</a>
+		</nav>
+		<div class="menu target"></div>
+		<!-- end of navbar -->
+		
 		<div class="container">
 			<!-- begin section 1 -->
 			<section class="section-one">
@@ -146,7 +172,7 @@
 				<div class="section-four-text">
 					<h2 class="section-four-heading">Sign Me Up</h2>
 					<p class="section-four-paragraph">
-                  be the first to know about new products!
+						be the first to know about new products!
 					</p>
 				</div>
 				<form class="signup-form">
@@ -159,7 +185,9 @@
 						<i class="fas fa-arrow-right"></i>
 					</button>
 				</form>
-				<p class="copyright">&copy;&nbsp;Food Website, All rights reserved</p>
+				<p class="copyright">
+					&copy;&nbsp;Food Website, All rights reserved
+				</p>
 			</section>
 			<!-- end of section 4 -->
 		</div>
