--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 	<body>
 		<!-- begin of navbar -->
 		<nav class="navbar target">
-			<a href="#" class="navbar-link">
+			<a href="#/" class="navbar-link">
 				<i class="fas fa-home"></i>
 				<span>Home</span>
 			</a>
-			<a href="#" class="navbar-link">
+			<a href="#/" class="navbar-link">
 				<i class="fas fa-utensils"></i>
 				<span>Meals</span>
 			</a>
-			<a href="#" class="navbar-link">
+			<a href="#/" class="navbar-link">
 				<i class="fas fa-hamburger"></i>
 				<span>Burger</span>
 			</a>
-			<a href="#" class="navbar-link">
+			<a href="#/" class="navbar-link">
 				<i class="fas fa-pizza-slice"></i>
 				<span>Pizza</span>
 			</a>
@@ -92,9 +92,9 @@
 			<section class="section-three">
 				<h1 class="section-heading">Gallery</h1>
 				<div class="gallery">
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-1.jpg"
+							src="img/gallery-img-1.jpg"
 							class="food-img"
 							alt="pancakes"
 						/>
@@ -104,9 +104,9 @@
 							was whence time fathers land his, did.
 						</p>
 					</a>
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-2.jpg"
+							src="img/gallery-img-2.jpg"
 							class="food-img"
 							alt="cupcakes"
 						/>
@@ -116,9 +116,9 @@
 							was whence time fathers land his, did.
 						</p>
 					</a>
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-3.jpg"
+							src="img/gallery-img-3.jpg"
 							class="food-img"
 							alt="hummus"
 						/>
@@ -128,9 +128,9 @@
 							was whence time fathers land his, did.
 						</p>
 					</a>
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-4.jpg"
+							src="img/gallery-img-4.jpg"
 							class="food-img"
 							alt="hamburger"
 						/>
@@ -140,9 +140,9 @@
 							was whence time fathers land his, did.
 						</p>
 					</a>
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-5.jpg"
+							src="img/gallery-img-5.jpg"
 							class="food-img"
 							alt="salmon"
 						/>
@@ -152,9 +152,9 @@
 							was whence time fathers land his, did.
 						</p>
 					</a>
-					<a href="#" class="gallery-link" title="Order Now?">
+					<a href="#/" class="gallery-link" title="Order Now?">
 						<img
-							src="/img/gallery-img-6.jpg"
+							src="img/gallery-img-6.jpg"
 							class="food-img"
 							alt="vegetables"
 						/>
