Update styles for media queries

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</nav>
 		<div class="menu target"></div>
 		<!-- end of navbar -->
-		
+
 		<div class="container">
 			<!-- begin section 1 -->
 			<section class="section-one">
@@ -169,24 +169,27 @@
 			<!-- end of  section 3 -->
 			<!-- begin of section 4 -->
 			<section class="section-four">
-				<div class="section-four-text">
-					<h2 class="section-four-heading">Sign Me Up</h2>
-					<p class="section-four-paragraph">
-						be the first to know about new products!
-					</p>
+				<div class="section-four-inner">
+					<div class="section-four-text">
+						<h2 class="section-four-heading">Sign Me Up</h2>
+						<p class="section-four-paragraph">
+							be the first to know about new products!
+						</p>
+					</div>
+					<form class="signup-form">
+						<input
+							type="email"
+							class="signup-form-input"
+							placeholder="Enter Your Email"
+						/>
+						<button type="submit" class="signup-form-btn">
+							<i class="fas fa-arrow-right"></i>
+						</button>
+					</form>
 				</div>
-				<form class="signup-form">
-					<input
-						type="email"
-						class="signup-form-input"
-						placeholder="Enter Your Email"
-					/>
-					<button type="submit" class="signup-form-btn">
-						<i class="fas fa-arrow-right"></i>
-					</button>
-				</form>
+				<hr class='horizontal-line' />
 				<p class="copyright">
-					&copy;&nbsp;Food Website, All rights reserved
+					&copy;2021&nbsp;Food Website, All rights reserved
 				</p>
 			</section>
 			<!-- end of section 4 -->
